Added changes for Jacoco code coverage.